[gd_scene load_steps=3 format=3 uid="uid://b6xtjo617kfsu"]

[ext_resource type="Texture2D" uid="uid://d1jsdn7q2trb4" path="res://Assets/resources/tile104.png" id="1_78vlx"]
[ext_resource type="Script" path="res://Scenes/UI/resources/resource_item_panel.gd" id="1_vdrfr"]

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(100, 20)
script = ExtResource("1_vdrfr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ResourceTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_78vlx")
stretch_mode = 3

[node name="ResourceName" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 10
text = "Wood"
vertical_alignment = 1

[node name="ResourceAmount" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "5234"
horizontal_alignment = 2
vertical_alignment = 1
